--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -1580,7 +1580,7 @@ ui:
     visited_x_days: "Visited {{ count }} days"
     viewed: Viewed
     joined: Joined
-    comma: ','
+    comma: ","
     last_login: Seen
     about_me: About Me
     about_me_empty: "// Hello, World !"
@@ -1738,6 +1738,11 @@ ui:
     qrcode_login_tip: Please use {{ agentName }} to scan the QR code and log in.
     login_failed_email_tip: Login failed, please allow this app to access your email information before try again.
   badges:
+    modal:
+      title: Congratulations
+      content: You've earned a new badge.
+      close: Close
+      confirm: View badges
     title: Badges
     awarded: Awarded
     earned_x: Earned x{{ number }}
